polish openapi
